<resources>
    <string name="app_name">FirstProject</string>
    <string name="welcome_to_ru_pizzeria">Welcome to RU Pizzeria!</string>
    <string name="go_back_to_home">Go Back to Home</string>
    <string name="welcome_to_the_second_screen">Welcome to the Second Screen!</string>
    <string name="meatzza">Meatzza</string>
    <string name="deluxe">Deluxe</string>
    <string name="bbq_chicken">BBQ Chicken</string>
    <string name="build_your_own">Build your own</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4" />
    <string name="chicago_style_crust">Chicago Style Crust</string>
    <string name="ny_style_crust">NY Style Crust</string>
    <string name="small">Small</string>
    <string name="medium">medium</string>
    <string name="large">Large</string>
    <string name="current_orders">Current Orders</string>
    <string name="add_pizza">Add pizza</string>
    <string name="build_your_own_pizza">Build Your Own Pizza!</string>
    <string name="back_to_home_screen">Back to Home Screen</string>
    <string name="Build">Build your own pizza</string>
    <string name="pan">Pan</string>
    <string name="hand_tossed">hand-tossed</string>
    <string name="crust_style">Crust Style:</string>
    <string name="size">Size</string>
    <string name="current_order">Current Order</string>
    <string name="submit_order">Submit Order</string>
    <string name="your_current_pizza_order">Your Current Pizza Order</string>
    <string name="back_to_main_view">Back to Main View</string>
    <string name="your_current_order">Your Current Order</string>
    <string name="Back">Button</string>
    <string name="button">Button</string>
    <string name="back_to_main">Back to main</string>
    <string name="list_of_orders">List of Orders</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
</resources>