<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/secondScreenText"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        android:gravity="top"
        android:text="@string/welcome_to_the_second_screen"
        android:textColor="#000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_to_home"
        android:gravity="top"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:background="#f0f0f0"
        tools:ignore="TextSizeCheck" />

    <RadioGroup
        android:id="@+id/radioGroupForType"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- RadioButtons -->
        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Meatzza"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deluxe"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="BBQ Chicken"
            tools:ignore="HardcodedText" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupForCrust"
        android:layout_width="338dp"
        android:layout_height="77dp"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/chicago_style_crust" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ny_style_crust"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupForSize"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_pizza"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>
