<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroupForbyocrust"
        android:layout_width="338dp"
        android:layout_height="77dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp">

        <RadioButton
            android:layout_width="134dp"
            android:layout_height="48dp"
            android:text="@string/pan" />

        <RadioButton
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:text="@string/hand_tossed"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupForbyosize"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupForbyocrust"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp" />

    <RadioGroup
        android:id="@+id/radioGroupForbyosize"
        android:layout_width="177dp"
        android:layout_height="168dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="29dp">

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:text="@string/small" />

        <RadioButton
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:text="@string/large"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="221dp"
        android:layout_height="51dp"
        android:text="@string/back_to_home_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupForbyosize"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crust_style"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupForbyocrust"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp" />


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="157dp" />

    <ListView
        android:id="@+id/toppingsList"
        android:layout_width="147dp"
        android:layout_height="236dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioGroupForbyosize"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupForbyocrust"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>